# nightingale-hacking

./: .gitignore  CMakeLists.txt  allmakefiles.sh  build.sh  configure.ac  diff-build.out  diff-build.sh
components/: CMakeLists.txt
components/addonmetadata/src/: CMakeLists.txt
components/albumart/public/: CMakeLists.txt
components/albumart/src/: CMakeLists.txt
components/appstartup/src/: CMakeLists.txt
components/bundle/public/: CMakeLists.txt
components/bundle/src/: CMakeLists.txt
components/commandline/public/: CMakeLists.txt
components/commandline/src/: CMakeLists.txt
components/contenthandling/media/: CMakeLists.txt  Makefile.in
components/controller/public/: CMakeLists.txt
components/controller/src/: CMakeLists.txt
components/dataremote/public/: CMakeLists.txt
components/dataremote/src/: CMakeLists.txt
components/dbengine/public/: CMakeLists.txt
components/dbengine/src/: CMakeLists.txt  DatabaseEngine.cpp  DatabaseResult.cpp
components/devices/: CMakeLists.txt
components/devices/base/public/: CMakeLists.txt
components/devices/base/src/: CMakeLists.txt
components/devices/cd/public/: CMakeLists.txt
components/devices/cd/src/: CMakeLists.txt
components/devices/controller/public/: CMakeLists.txt
components/devices/controller/src/: CMakeLists.txt
components/devices/device/public/: CMakeLists.txt
components/devices/device/src/: CMakeLists.txt  sbRequestThreadQueue.cpp
components/devices/firmware/: CMakeLists.txt
components/devices/firmware/src/: CMakeLists.txt
components/devices/manager/src/: CMakeLists.txt
components/devices/marshall/public/: CMakeLists.txt
components/devices/marshall/src/: CMakeLists.txt
components/devicesobsolete/: CMakeLists.txt
components/devicesobsolete/base/public/: CMakeLists.txt
components/devicesobsolete/base/src/: CMakeLists.txt
components/devicesobsolete/download/public/: CMakeLists.txt
components/devicesobsolete/download/src/: CMakeLists.txt
components/devicesobsolete/manager/public/: CMakeLists.txt
components/devicesobsolete/manager/src/: CMakeLists.txt
components/displaypanes/public/: CMakeLists.txt
components/displaypanes/src/: CMakeLists.txt
components/draganddrop/public/: CMakeLists.txt
components/draganddrop/src/: CMakeLists.txt
components/faceplate/public/: CMakeLists.txt
components/faceplate/src/: CMakeLists.txt
components/feathers/public/: CMakeLists.txt
components/feathers/src/: CMakeLists.txt
components/filesystemevents/: CMakeLists.txt
components/filesystemevents/base/public/: CMakeLists.txt
components/filesystemevents/base/src/: CMakeLists.txt
components/filesystemevents/linux/: CMakeLists.txt
components/integration/public/: CMakeLists.txt
components/integration/src/: CMakeLists.txt
components/integration/src/linux/: CMakeLists.txt
components/intl/public/: CMakeLists.txt
components/intl/src/: CMakeLists.txt
components/job/public/: CMakeLists.txt
components/job/src/: CMakeLists.txt
components/jscodelib/: CMakeLists.txt
components/mediacore/: CMakeLists.txt
components/mediacore/base/public/: CMakeLists.txt
components/mediacore/base/src/: CMakeLists.txt
components/mediacore/gstreamer/public/: CMakeLists.txt
components/mediacore/gstreamer/src/: CMakeLists.txt
components/mediacore/manager/public/: CMakeLists.txt
components/mediacore/manager/src/: CMakeLists.txt
components/mediacore/metadata/: CMakeLists.txt
components/mediacore/metadata/lookup/: CMakeLists.txt
components/mediacore/playback/: CMakeLists.txt
components/mediacore/transcode/public/: CMakeLists.txt
components/mediacore/transcode/src/: CMakeLists.txt
components/mediaexport/: CMakeLists.txt
components/mediaexport/agent/src/: CMakeLists.txt
components/mediaexport/playlist/public/: CMakeLists.txt
components/mediaexport/public/: CMakeLists.txt
components/mediaexport/src/: CMakeLists.txt
components/mediaimport/: CMakeLists.txt
components/mediaimport/directory/: CMakeLists.txt
components/mediaimport/directory/public/: CMakeLists.txt
components/mediaimport/directory/src/: CMakeLists.txt
components/mediaimport/filescan/public/: CMakeLists.txt
components/mediaimport/filescan/src/: CMakeLists.txt
components/mediaimport/playlist/public/: CMakeLists.txt
components/mediaimport/playlist/src/: CMakeLists.txt
components/mediaimport/uri/public/: CMakeLists.txt
components/mediaimport/uri/src/: CMakeLists.txt
components/mediamanager/public/: CMakeLists.txt
components/mediamanager/src/: CMakeLists.txt
components/mediapages/src/: CMakeLists.txt
components/metrics/public/: CMakeLists.txt
components/metrics/src/: CMakeLists.txt
components/moz/: CMakeLists.txt
components/moz/clipboard/: CMakeLists.txt
components/moz/clipboard/public/: CMakeLists.txt
components/moz/clipboard/src/: CMakeLists.txt
components/moz/dirprovider/src/: CMakeLists.txt
components/moz/distribution/: CMakeLists.txt
components/moz/errorconsole/src/: CMakeLists.txt
components/moz/strings/: CMakeLists.txt
components/networkproxy/public/: CMakeLists.txt
components/networkproxy/src/: CMakeLists.txt
components/parsererror/src/: CMakeLists.txt
components/playlistcommands/public/: CMakeLists.txt
components/playlistcommands/src/: CMakeLists.txt
components/playqueue/public/: CMakeLists.txt
components/playqueue/src/: CMakeLists.txt
components/property/public/: CMakeLists.txt
components/property/src/: CMakeLists.txt
components/protocol/: CMakeLists.txt
components/remoteapi/public/: CMakeLists.txt
components/remoteapi/src/: CMakeLists.txt
components/search/src/: CMakeLists.txt
components/servicepane/src/: CMakeLists.txt
components/sqlbuilder/public/: CMakeLists.txt
components/sqlbuilder/src/: CMakeLists.txt
components/testharness/src/: CMakeLists.txt
components/update/public/: CMakeLists.txt
components/update/src/: CMakeLists.txt
components/watchfolder/: CMakeLists.txt
components/watchfolder/public/: CMakeLists.txt
components/watchfolder/src/: CMakeLists.txt
components/watchfolder/utils/: CMakeLists.txt
(+89 files in other folders)
