add_subdirectory(addonmetadata)
add_subdirectory(albumart)
add_subdirectory(bundle)
add_subdirectory(commandline)
add_subdirectory(contenthandling)
add_subdirectory(controller)
add_subdirectory(dataremote)
add_subdirectory(dbengine)
add_subdirectory(devices)
add_subdirectory(devicesobsolete)
add_subdirectory(filesystemevents)
add_subdirectory(integration)
add_subdirectory(intl)
add_subdirectory(job)
add_subdirectory(library)
add_subdirectory(mediacore)
add_subdirectory(mediaexport)
add_subdirectory(mediaimport)
add_subdirectory(mediamanager)
add_subdirectory(metrics)
add_subdirectory(moz)
add_subdirectory(networkproxy)
add_subdirectory(playlistcommands)
add_subdirectory(playqueue)
add_subdirectory(property)
add_subdirectory(remoteapi)
add_subdirectory(sqlbuilder)
add_subdirectory(update)
add_subdirectory(watchfolder)
add_subdirectory(webservices)