add_subdirectory(clipboard)
add_subdirectory(dirprovider)
add_subdirectory(errorconsole)
add_subdirectory(filedownloader)
add_subdirectory(fileutils)
add_subdirectory(image)
add_subdirectory(process)
add_subdirectory(prompter)
add_subdirectory(streams)
add_subdirectory(strings)
add_subdirectory(temporaryfileservice)
add_subdirectory(threadpoolservice)
add_subdirectory(threads)
add_subdirectory(urlformatter)
add_subdirectory(variant)
add_subdirectory(windowwatcher)
add_subdirectory(xpcom)